--- a/GitWatch/RepositoryInterval.plist
+++ b/GitWatch/RepositoryInterval.plist
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   RepositoryInterval.plist
-   GitWatch
-
-   Created by Halid Cisse on 5/16/16.
-   Copyright (c) 2016 Halid Cisse. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-    
-    </dict>
+<array>
+	<string>bn</string>
+</array>
 </plist>
