Some auto layout stuffs

--- a/podfile
+++ b/podfile
@@ -4,5 +4,6 @@ target ‘GitWatch’ do
   pod 'SDWebImage', '~>3.7'
   pod 'DateTools'
   pod 'FSNetworking'
+  pod 'ObjectiveSugar'
   #pod 'RestKit'
 end
