--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: objective-c
 xcode_project: GitWatch.xcworkspace # path to your xcodeproj folder
 xcode_scheme: GitWatch
+
+before_install: gem install cocoapods --pre 
