--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,12 @@ language: objective-c
 xcode_project: GitWatch.xcworkspace # path to your xcodeproj folder
 xcode_scheme: GitWatch
 
-before_install: gem install cocoapods --pre 
+before_install: 
+gem install cocoapods --pre 
+
+- env
+      - locale		      - locale
+ +    - rvm use system
+      - gem install cocoapods --no-rdoc --no-ri --no-document --quiet		      - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
+      - gem install xcpretty --no-rdoc --no-ri --no-document --quiet		      - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
+      - pod --version		      - pod --version
