loader instead of empty-list-illustration

--- a/podfile
+++ b/podfile
@@ -1,6 +1,7 @@
 use_frameworks!
 target ‘GitWatch’ do
     
+  pod 'SVPullToRefresh'
   pod 'IQKeyboardManager'
   pod 'DZNEmptyDataSet'
   pod 'SSKeychain'
