--- a/podfile
+++ b/podfile
@@ -10,6 +10,8 @@ target ‘GitWatch’ do
   pod 'FSNetworking'
   pod 'AMSmoothAlert', '~> 1.0'
   pod 'MBProgressHUD'
+  pod 'Fabric'
+  pod 'Crashlytics'
   
   #pod 'ObjectiveSugar'
   #pod 'DCKit'
